- Improved: Pictures optimized & added pictures to product bottom sheet and recipe page (#536)
- Improved: On recipe ingredient edit page, product overview sheet now can be displayed
- Improved: Horizontal actions layout on overview page for smaller screens
- Improved: Clear caching related info after app update or database update for data refresh (#726)
- Fixed: Amounts with conversions are consistent over all pages now (#612, #626)
- Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
- Fixed: On product creation with prefilled name there was a plus instead of space character
- Fixed: On product details sheet, description card was rendered with wrong height sometimes (#717)
- Fixed: Editing of recipe ingredient with broken quantity unit is possible now

## 3.2.1

- Fixed: Random crash with no reason (#699)
- Fixed: Prevent another crash after reopening app from background (#697)
- Fixed: Product pictures not loading (with Home Assistant or not, we don't know) (#700)
- Fixed: Overview and stock page not populated after theme change or other cases (#692, #695)
- Fixed: Crash on stock page with opened product overview sheet in some cases (#673)

## 3.2.0

- New: Catalan, Estonian and Portuguese (Brazil) translations. Many thanks for your contributions!
- New: Product pictures on stock & master products list if at least one picture is available (#536)
- New: Grid layout for recipes list
- New: Many pages of the app now can be opened using NFC tags with URI (thanks @codesalatdev) (#676)