@@ -72,7 +72,7 @@ public class FormDataRecipeEditIngredientEdit {
   private final MutableLiveData<String> ingredientGroupLive;
   private final MutableLiveData<String> noteLive;
   private final MutableLiveData<String> priceFactorLive;
-  private final MutableLiveData<Integer> priceFactorErrorLive;
+  private final MutableLiveData<String> priceFactorErrorLive;
   private final PluralUtil pluralUtil;
   private boolean filledWithRecipePosition;
   private final int maxDecimalPlacesAmount;
@@ -142,7 +142,7 @@ public class FormDataRecipeEditIngredientEdit {
     notCheckStockFulfillmentLive = new MutableLiveData<>(false);
     ingredientGroupLive = new MutableLiveData<>();
     noteLive = new MutableLiveData<>();
-    priceFactorLive = new MutableLiveData<>();
+    priceFactorLive = new MutableLiveData<>(String.valueOf(1));
     priceFactorErrorLive = new MutableLiveData<>();
 
     filledWithRecipePosition = false;
@@ -268,7 +268,7 @@ public class FormDataRecipeEditIngredientEdit {
     return priceFactorLive;
   }
 
-  public MutableLiveData<Integer> getPriceFactorErrorLive() {
+  public MutableLiveData<String> getPriceFactorErrorLive() {
     return priceFactorErrorLive;
   }
 
@@ -281,7 +281,10 @@ public class FormDataRecipeEditIngredientEdit {
   }
 
   public boolean isFormValid() {
-    return isProductNameValid() && isAmountValid();
+    boolean valid = isProductNameValid();
+    valid = isAmountValid() && valid;
+    valid = isPriceFactorValid() && valid;
+    return valid;
   }
 
   public boolean isProductNameValid() {
@@ -308,7 +311,7 @@ public class FormDataRecipeEditIngredientEdit {
 
   public boolean isAmountValid() {
     if (amountLive.getValue() == null || amountLive.getValue().isEmpty()) {
-      amountErrorLive.setValue(application.getString(R.string.error_invalid_base_servings));
+      amountErrorLive.setValue(application.getString(R.string.error_invalid_amount));
       return false;
     }
 
@@ -319,9 +322,9 @@ public class FormDataRecipeEditIngredientEdit {
       return false;
     }
 
-    double baseServings = NumUtil.toDouble(amountLive.getValue());
-    if (baseServings <= 0) {
-      amountErrorLive.setValue(application.getString(R.string.error_invalid_base_servings));
+    double amount = NumUtil.toDouble(amountLive.getValue());
+    if (amount <= 0) {
+      amountErrorLive.setValue(application.getString(R.string.error_invalid_amount));
       return false;
     }
     amountErrorLive.setValue(null);
@@ -344,11 +347,49 @@ public class FormDataRecipeEditIngredientEdit {
       amountLive.setValue(NumUtil.trimAmount(1.0, maxDecimalPlacesAmount));
     } else {
       double currentValue = NumUtil.toDouble(amountLive.getValue());
-
-      if (currentValue == 1)
-        return;
-
+      if (currentValue == 1) return;
       amountLive.setValue(NumUtil.trimAmount(currentValue - 1, maxDecimalPlacesAmount));
+    }
+  }
+
+  public boolean isPriceFactorValid() {
+    if (priceFactorLive.getValue() == null || priceFactorLive.getValue().isEmpty()) {
+      priceFactorErrorLive.setValue(application.getString(R.string.error_invalid_factor));
+      return false;
+    }
+
+    if (NumUtil.getDecimalPlacesCount(priceFactorLive.getValue()) > maxDecimalPlacesAmount) {
+      priceFactorErrorLive.setValue(application.getResources().getQuantityString(
+          R.plurals.error_max_decimal_places, maxDecimalPlacesAmount, maxDecimalPlacesAmount
+      ));
+      return false;
+    }
+
+    double factor = NumUtil.toDouble(priceFactorLive.getValue());
+    if (factor <= 0) {
+      priceFactorErrorLive.setValue(application.getString(R.string.error_invalid_factor));
+      return false;
+    }
+    priceFactorErrorLive.setValue(null);
+    return true;
+  }
+
+  public void morePriceFactor() {
+    if (priceFactorLive.getValue() == null || priceFactorLive.getValue().isEmpty()) {
+      amountLive.setValue(NumUtil.trimAmount(1.0, maxDecimalPlacesAmount));
+    } else {
+      double currentValue = NumUtil.toDouble(priceFactorLive.getValue());
+      priceFactorLive.setValue(NumUtil.trimAmount(currentValue + 1, maxDecimalPlacesAmount));
+    }
+  }
+
+  public void lessPriceFactor() {
+    if (priceFactorLive.getValue() == null || priceFactorLive.getValue().isEmpty()) {
+      priceFactorLive.setValue(NumUtil.trimAmount(1.0, maxDecimalPlacesAmount));
+    } else {
+      double currentValue = NumUtil.toDouble(priceFactorLive.getValue());
+      if (currentValue == 1) return;
+      priceFactorLive.setValue(NumUtil.trimAmount(currentValue - 1, maxDecimalPlacesAmount));
     }
   }
 
@@ -371,6 +412,8 @@ public class FormDataRecipeEditIngredientEdit {
     recipePosition.setNotCheckStockFulfillment(notCheckStockFulfillmentLive.getValue());
     recipePosition.setIngredientGroup(ingredientGroupLive.getValue());
     recipePosition.setNote(noteLive.getValue());
+    recipePosition.setPriceFactor(NumUtil.isStringDouble(priceFactorLive.getValue())
+        ? NumUtil.toDouble(priceFactorLive.getValue()) : 1);
 
     return recipePosition;
   }
