@@ -243,6 +243,35 @@
               </LinearLayout>
 
               <LinearLayout
+                android:id="@+id/category_quantity_unit"
+                style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Clickable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                app:transitionTypeChanging="@{true}">
+
+                <ImageView
+                  style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+                  android:src="@drawable/ic_round_weights"
+                  tools:ignore="ContentDescription" />
+
+                <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+                  <TextView
+                    android:id="@+id/text_quantity_unit_label"
+                    style="@style/Widget.Grocy.TextView.ListItem.OverLine"
+                    android:text="@string/title_product_cat_quantity_unit" />
+
+                  <TextView
+                    android:id="@+id/quantity_unit"
+                    android:text="@{formData.quantityUnitLabelLive}"
+                    style="@style/Widget.Grocy.TextView.ListItem.Title" />
+
+                </LinearLayout>
+
+              </LinearLayout>
+
+              <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -270,7 +299,7 @@
                   <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/text_input_amount"
                     style="@style/Widget.Grocy.TextInputLayout.FilledBox"
-                    android:hint="@{formData.amountHintLive}"
+                    android:hint="@{formData.amountHintLive ?? @string/property_amount}"
                     app:helperText="@{formData.amountHelperLive}"
                     app:errorText="@{formData.amountErrorLive}"
                     app:endIconMode="clear_text"
@@ -310,34 +339,21 @@
 
               </LinearLayout>
 
-              <LinearLayout
-                android:id="@+id/category_quantity_unit"
-                style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Clickable"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
-                app:transitionTypeChanging="@{true}">
+              <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Grocy.Card.Text"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:visibility="@{formData.displayHelpLive ? View.VISIBLE : View.GONE}">
 
-                <ImageView
-                  style="@style/Widget.Grocy.ImageView.ListItem.Icon"
-                  android:src="@drawable/ic_round_weights"
-                  tools:ignore="ContentDescription" />
+                <TextView
+                  style="@style/Widget.Grocy.TextView.Paragraph"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="@string/msg_help_variable_amount" />
 
-                <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
-
-                  <TextView
-                    android:id="@+id/text_quantity_unit_label"
-                    style="@style/Widget.Grocy.TextView.ListItem.OverLine"
-                    android:text="@string/title_product_cat_quantity_unit" />
-
-                  <TextView
-                    android:id="@+id/quantity_unit"
-                    android:text="@{formData.quantityUnitLabelLive}"
-                    style="@style/Widget.Grocy.TextView.ListItem.Title" />
-
-                </LinearLayout>
-
-              </LinearLayout>
+              </com.google.android.material.card.MaterialCardView>
 
               <LinearLayout
                 style="@style/Widget.Grocy.LinearLayout.ListItem"
@@ -396,6 +412,22 @@
                   android:checked="@={formData.notCheckStockFulfillmentLive}" />
 
               </LinearLayout>
+
+              <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Grocy.Card.Text"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:visibility="@{formData.displayHelpLive ? View.VISIBLE : View.GONE}">
+
+                <TextView
+                  style="@style/Widget.Grocy.TextView.Paragraph"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="@string/msg_help_recipe_group" />
+
+              </com.google.android.material.card.MaterialCardView>
 
               <LinearLayout
                 style="@style/Widget.Grocy.LinearLayout.ListItem"
@@ -456,6 +488,80 @@
                     app:onDoneClickInSoftKeyboard="@{() -> fragment.clearInputFocus()}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+              </LinearLayout>
+
+              <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Grocy.Card.Text"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:visibility="@{formData.displayHelpLive ? View.VISIBLE : View.GONE}">
+
+                <TextView
+                  style="@style/Widget.Grocy.TextView.Paragraph"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="@string/msg_help_recipe_price_factor" />
+
+              </com.google.android.material.card.MaterialCardView>
+
+              <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <LinearLayout
+                  style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine"
+                  android:layout_width="0dp"
+                  android:layout_weight="1"
+                  android:paddingTop="8dp"
+                  android:paddingBottom="8dp"
+                  android:paddingStart="16dp"
+                  android:paddingEnd="0dp">
+
+                  <ImageView
+                    style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+                    android:src="@drawable/ic_round_factor"
+                    tools:ignore="ContentDescription" />
+
+                  <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_input_price_factor"
+                    style="@style/Widget.Grocy.TextInputLayout.FilledBox"
+                    android:hint="@string/property_price_factor"
+                    app:errorText="@{formData.priceFactorErrorLive}"
+                    app:endIconMode="clear_text"
+                    app:endIconOnClickListener="@{v -> fragment.clearAmountFieldAndFocusIt()}">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                      android:id="@+id/edit_text_price_factor"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:inputType="number|numberDecimal"
+                      android:imeOptions="actionDone"
+                      android:maxLength="10"
+                      android:text="@={formData.priceFactorLive}"
+                      android:afterTextChanged="@{() -> formData.isPriceFactorValid()}"
+                      app:onFocusChangeListener="@{(v, focus) -> activity.startIconAnimation(imageAmount, focus)}"
+                      app:onDoneClickInSoftKeyboard="@{() -> fragment.clearInputFocus()}" />
+
+                  </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                  style="@style/Widget.Grocy.Button.IconButton"
+                  android:layout_marginStart="8dp"
+                  android:onClick="@{() -> formData.morePriceFactor()}"
+                  app:icon="@drawable/ic_round_expand_less" />
+
+                <com.google.android.material.button.MaterialButton
+                  style="@style/Widget.Grocy.Button.IconButton"
+                  android:layout_marginEnd="8dp"
+                  android:onClick="@{() -> formData.lessPriceFactor()}"
+                  app:icon="@drawable/ic_round_expand_more" />
 
               </LinearLayout>
 
